uri: add guard to make sure gstreamer is initialized

https://bugzilla.gnome.org/show_bug.cgi?id=761448